<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageButton
        android:id="@+id/btnVoltar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/voltar"
        android:scaleType="centerInside"
        android:src="@drawable/ic_voltar_azul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoTopo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="Logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_azul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEditarTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/staatliches"
        android:gravity="start"
        android:letterSpacing="0.05"
        android:text="@string/editar_telefone"
        android:textColor="#32357A"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnVoltar" />

    <TextView
        android:id="@+id/txtSubEditarTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/inter"
        android:gravity="start"
        android:text="@string/editar_telefone_label"
        android:textColor="#32357A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEditarTelefone" />

    <ProgressBar
        android:id="@+id/progress_bar_telefone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/txtSubEditarTelefone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editNovoTelefone"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_arredondado3"
        android:drawableStart="@drawable/ic_phone"
        android:fontFamily="@font/inter"
        android:drawablePadding="10dp"
        android:hint="@string/novo_telefone_hint"
        android:autofillHints="phone"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#121212"
        android:textColorHint="#80121212"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_bar_telefone" />

    <Button
        android:id="@+id/btnSalvarTelefone"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_arredondado"
        android:backgroundTint="#32357A"
        android:fontFamily="@font/staatliches"
        android:text="@string/salvar"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNovoTelefone" />

</androidx.constraintlayout.widget.ConstraintLayout>
