<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardMapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2.5dp"
        app:strokeColor="#32357A"
        app:strokeWidth="0.55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:id="@+id/ivThumbMapa"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_minimap_placeholder"
                android:contentDescription="@string/thumb_mapa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:background="#FDFDFD">

                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/txtNome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter"
                    android:layout_marginStart="6dp"
                    android:text="@string/nome_do_mapa"
                    android:textColor="#32357A"
                    android:textSize="17sp"
                    android:textStyle="normal" />

                <ImageButton
                    android:id="@+id/btnFavorito"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/app_name"
                    android:padding="4dp"
                    android:src="@drawable/heartfavorites" />
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</FrameLayout>
